--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -18,7 +18,7 @@ layout: master
   {% if  page.description %}
     <h4>{{ page.description }} </h4>
   {% endif %}
- 
+  <p style="color:red">layout page</p>
 
   <div class="content">
     {{ page.content }}
